# crcalculator

./: .gitignore  CMakeLists.txt  GNUmakefile  PKGBUILD  README.md  build.sh  cr.cpp  cr3  cr4  crcalculator  fileManagement.cpp  fileManagement.h  grade.cpp  grade.h  groupby.h  lista.txt  main.cpp  makefile  menuInterface.cpp  menuInterface.h  meson.build  notas copy 2.txt  notas copy.txt  notas.csv  resources.cpp  resources.h  subject.cpp  subject.h
